# nee_partition

./: LICENSE  README.md  pylintrc  pyproject.toml
src/nee_partition/: gross_primary_productivity.py  main.py  models.py  partition.py  respiration.py  timeseries.py
